--- a/JS/Minesweeper/sheet.css
+++ b/JS/Minesweeper/sheet.css
@@ -1,6 +1,7 @@
 #menu{
     position: fixed;
     left: 0px; top: 0px;
+
     float: left;
     width: 100%;
     background: dimgrey;
@@ -19,4 +20,32 @@ h1{
 button{
     margin : 20px;
     padding: 10px;
+}
+.game{
+    position: fixed;
+    left: 0px;
+    top: 100px;
+    width: 100%;
+    text-align: center;
+}
+.singleBox{
+    display: inline-block;
+    background-color:  lightgray;
+    width: 25px; height: 25px;
+    margin: 3px;
+    box-shadow: 1px 1px 2px black;
+
+    font-size: 20px;
+    color: lightgray;
+}
+.colorT{
+    color:black;
+}
+
+.singleBox:hover{
+    background-color: dimgray;
+    color: dimgray;
+}
+.row{    
+    text-align: center;
 }
